--- a/src/app/components/sidebar/sidebar.html
+++ b/src/app/components/sidebar/sidebar.html
@@ -69,10 +69,11 @@
        [routerLinkActiveOptions]="{exact: true}" 
        class="menu-item">
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <rect x="1" y="3" width="15" height="13"/>
-        <polygon points="16 8 20 8 23 11 23 16 16 16 16 8"/>
-        <circle cx="5.5" cy="18.5" r="2.5"/>
-        <circle cx="18.5" cy="18.5" r="2.5"/>
+        <path d="M5 18a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
+        <path d="M19 18a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
+        <path d="M9 15V9h3l3 3h4l-2-4h-4V7h6l3 4v4"/>
+        <path d="M5 15h9"/>
+        <path d="M11 9l-1-4"/>
       </svg>
       <span>Entregadores</span>
     </a>
